# ghg-recipe-estimator

./: .dockerignore  .gcloudignore  .gitignore  .slugignore  .testmondata  .testmondata-shm  Dockerfile  Dockerfile.backend  Makefile  README.md  app.py  cloudbuild.yaml  comparison_api 2.py  comparison_api.py  dump.rdb  logging_config.yaml  myredis.py  punch_config.py  pyproject.toml  start.sh  template.env  test.json
.github/workflows/: continuous_integration.yaml
agents/: CHANGELOG.md  Introprompt.md  LEARNINGS.md  README.md  RULES.md
agents/app/: README.md
agents/food_co2_estimator/: README.md
agents/foodprint/: LEARNINGS.md  LEARNINGS_BUDGET_COMPARISON.md  README.md  STYLING_CHANGES.md
co2_comparison/: co2_comparison.py
data/: comparison_activities.json
food_co2_estimator/: blob_caching.py  co2_comparison.py  logger_utils.py  logging.py  main.py  rediscache.py
food_co2_estimator/chains/: rag_co2_estimator.py  recipe_extractor.py  search_co2_estimator.py  weight_estimator.py
food_co2_estimator/language/: detector.py  translator.py
food_co2_estimator/prompt_templates/: rag_co2_estimator.py  recipe_extractor.py  search_co2_estimator.py  weight_estimator.py
food_co2_estimator/pydantic_models/: co2_estimator.py  estimator.py  output.py  recipe_extractor.py  response_models.py  search_co2_estimator.py  weight_estimator.py
food_co2_estimator/retrievers/: search_retriever.py  vector_db_retriever.py
food_co2_estimator/url/: url2markdown.py  variables.py
food_co2_estimator/utils/: __init__.py  llm_model.py  openai_model.py  output_generator.py
foodprint/: .dockerignore  COMPONENTS.md  STYLING.md  cloudbuild.yaml  package-lock.json  package.json  svelte.config.js
foodprint/src/: app.css  app.html
sandbox/: chroma.ipynb  llama.ipynb  math.ipynb  output_parser_experiment.ipynb  test_firebase.ipynb  test_vectorstore.ipynb
scripts/: create_vector_store.py
static/: script.js  styles.css
static/css/: comparison.css  styles.css
static/js/: comparison.js  script.js
templates/: index.html
templates/partials/: comparison.html
tests/: conftest.py  data_paths.py  load_files.py  test_app.py  test_blob_caching.py  test_main.py  test_rediscache.py  urls.py
tests/scripts/: create_extracted_recipe.py  create_output_data.py  create_rag_co2_estimates.py  create_test_data.py  create_weight_estimates copy.py  create_weight_estimates.py  load_markdown_texts.py
tests/test_language/: test_detector.py  (+1 more)
(+636 files in other folders)
